web estable y minecraft-1.0.0-beta.1

--- a/index.html
+++ b/index.html
@@ -278,14 +278,14 @@
         
         <div class="project-card" data-type="desktop">
             <div class="project-image">
-                <img src="assets/minecraft-server/image.png" alt="Descripción de la imagen">
+                <img src="proyects/minecraft-server/assets/logo.svg">
             </div>
             <div class="project-content">
                 <span class="project-type type-desktop">Desktop App</span>
                 <h3 class="project-title">Minecraft Server</h3>
-                <p class="project-description">Aplicación para gestionar servidores de Minecraft e instancias. Soporte para crear respaldos de mundos</p>
+                <p class="project-description">Aplicación para gestionar servidores de Minecraft e instancias. Soporte para crear respaldos de mundos.</p>
                 <div class="project-meta">
-                    <span>v1.0.0</span>
+                    <span>v1.0.0-beta.1</span>
                     <span>Java</span>
                 </div>
                 <div class="project-actions">
@@ -293,7 +293,7 @@
                     <a href="https://github.com/dogiloki/minecraftServer" class="btn btn-secondary">Repositorio</a>
                 </div>
                 <div class="project-warning">
-                    <strong>Advertencia:</strong> <b>Este proyecto NO ES OFICIAL de Mojang o Microsoft</b>, es un proyecto personal para facilitar la gestión de servidores de Minecraft.
+                    <strong>Advertencia:</strong> <b>Este proyecto NO ES OFICIAL de Mojang o Microsoft</b>, es un proyecto personal para facilitar el lanzamiento de servidores de Minecraft.
                 </div>
             </div>
         </div>
