--- a/proyects/minecraft-server/index.html
+++ b/proyects/minecraft-server/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <base href="minecraft-server/"/>
     <title>Task Manager Pro - Detalles del Proyecto</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
@@ -310,11 +311,6 @@
             }
         }
         
-        .feature-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 16px rgba(0,0,0,0.1);
-        }
-        
         .feature-icon {
             font-size: 2rem;
             color: var(--secondary-color);
@@ -452,10 +448,10 @@
             <a href="https://github.com/dogiloki" class="back-btn">
                 <div class="logo">
                     <i class="fas fa-project-diagram"></i>
-                    <span title="Creador">Julio Villanueva</span>
+                    <span title="Desarrollador">Julio Villanueva</span>
                 </div>
             </a>
-            <a href="../../index.html" class="back-btn">
+            <a href="/" class="back-btn">
                 <i class="fas fa-arrow-left"></i>
                 Volver a proyectos
             </a>
@@ -465,7 +461,7 @@
     <div class="main-container">
         <div class="project-header">
             <div class="project-image">
-                <img src="assets/logo.svg" alt="Task Manager Pro">
+                <img src="assets/logo.svg">
             </div>
             <div class="project-info">
                 <span class="project-type">Desktop App</span>
