--- a/proyects/minecraft-server/index.html
+++ b/proyects/minecraft-server/index.html
@@ -450,7 +450,7 @@
                     <span title="Desarrollador">Julio Villanueva</span>
                 </div>
             </a>
-            <a href="/" class="back-btn">
+            <a href="https://dogiloki.github.io/wolftri" class="back-btn">
                 <i class="fas fa-arrow-left"></i>
                 Volver a proyectos
             </a>
