site web minecraft-server-1.0.0

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
         function getProjects(){
             XHR.request({
-                uri:"projects.json",
+                uri:"projects.json?v=1.0.0",
                 headers:{
                     'Accept':'application/json'
                 },
