--- a/proyects/minecraft-server/index.html
+++ b/proyects/minecraft-server/index.html
@@ -613,7 +613,7 @@
 
         function getProject(){
             XHR.request({
-                uri:"proyects/minecraft-server/data.json",
+                uri:"proyects/minecraft-server/data.json?v=1.0.0",
                 headers:{
                     'Accept':'application/json'
                 },
